Handling Overflow Issues In Workout Summary Cards

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -111,7 +111,6 @@
   align-items: center;
   background-color: var(--off-white);
   border-radius: 20px;
-  border: 1px solid var(--purple);
   box-shadow: 12px 12px 2px 1px rgba(248, 150, 46, 0.75);
   cursor: pointer;
   display: flex;
@@ -171,20 +170,34 @@
   height: 600px;
   margin-bottom: 30px;
   max-width: 1000px;
-  /* Makes the Workout Summary Cards Vertically Scrollable if There's Overflow */
-  overflow-x: hidden;
+  /* Makes the Workout Summary Cards Horizontally / Vertically Scrollable if There's Overflow */
+  overflow-x: scroll;
   overflow-y: display;
   padding: 10px;
   width: 90%;
 }
 
+/* Useful For Overflow Issues */
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+
+.example::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+
+.example {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
 /* Table Styling */
 
-/* Now the Tables Won't Overflow Horizontally Outside of the Workout Summary Cards */
+/* Now the Tables Won't Word Wrap On Horizontal Overflow */
 
 table {
-  table-layout: fixed;
-  width: 100%;
+  white-space: nowrap;
 }
 
 .styled-table {
